[package]
name = "fpsgame"
version = "0.1.0"
authors = ["Vengarioth | Andreas Fischer <opensource@deviru.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.3"
gltf = "0.15"
noise = "0.6.0"
once_cell = "1.5.2"
rand = "0.7.3"